# chimney-sim

./: LICENSE  README.md  pyproject.toml
config/: simulation_inputs.yaml
src/chimney-sim/: _version.py  flow_rates.py  geometry_setup.py  input_handling.py  run_simulation.py  thermo_properties.py  wood_heat_release.py
src/chimney_sim/: __main__.py  _version.py  fluid_mechanics.py  geometry_setup.py  heat_transfer.py  input_handling.py  run_simulation.py  thermo_properties.py  units.py  wood_heat_release.py
tests/: test_flue_density.py
